# crewai-graphify-debugger

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: budget_limits.json  rate_limits.json
docs/: PLAN.md  PRD.md  PRD_budget_tracker.md  TODO.md  target_bug.md
obsidian/: bug_investigation.md  graph.json  hot.md  index.md
obsidian/.obsidian/: workspace.json
reports/: root_cause_report.json  token_efficiency_report.md
scripts/: capture_before.sh  check_line_limits.py  dev.sh  live_run.py  regenerate_vault_polygons.py  stage_obsidian.sh  verify_phase2.py
src/crewai_graphify/: main.py  server.py
src/crewai_graphify/agents/: crew.py  pipeline.py  tasks.py  tools.py
src/crewai_graphify/models/: graph.py  hypothesis.py  llm.py
src/crewai_graphify/sdk/: claude_client.py  deepseek_client.py
src/crewai_graphify/services/: graph_builder.py  obsidian_manager.py
src/crewai_graphify/shared/: archiver.py  budget_tracker.py  config.py  env.py  fixture_setup.py  gatekeeper.py  rate_limiter.py  sse_log.py  version.py
tests/integration/: test_token_efficiency.py
tests/unit/: conftest.py  test_archiver.py  test_budget_tracker.py  test_budget_tracker_flush.py  test_claude_client.py  test_config.py  test_crew.py  test_deepseek_client.py  test_gatekeeper.py  test_graph_builder.py  test_hypothesis.py  test_main.py  test_obsidian_manager.py  test_pipeline.py  test_rate_limiter.py  test_tasks.py  test_tools.py  test_tools_patch.py  test_tools_read.py
ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: CodeInspector.tsx  FileExplorer.tsx  GraphViewer.tsx  LiveTerminal.tsx
ui/src/hooks/: useDebuggerSession.ts
ui/src/lib/: format.ts  graph.ts  types.ts
ui/src/lib/__tests__/: format.test.ts  graph.test.ts
