[project]
name = "crewai-graphify-debugger"
version = "1.0.0"
description = "Token-efficient, graph-guided agentic AI debugging system using CrewAI and Grphify."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "crewai>=0.80.0",
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
graphify-debug = "crewai_graphify.orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_graphify"]

# ---------------------------------------------------------------------------
# uv dev dependencies
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/crewai_graphify",
    "--cov-report=term-missing",
    "--cov-branch",
    "-v",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/crewai_graphify"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/server.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.\\s*$",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]
exclude = ["workspace"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — enforced at the 150-source-line level by scripts/check_line_limits.py
]

[tool.ruff.lint.isort]
known-first-party = ["crewai_graphify"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]
